--- a/admin/config-repo/zuihou-service/zuihou-zipkin/application-dev.yml
+++ b/admin/config-repo/zuihou-service/zuihou-zipkin/application-dev.yml
@@ -1,16 +1,17 @@
+
 spring:
   profiles:
     active: dev
   rabbitmq:
-    host: zuihou.rabbitmq.host # ÔÚhostsÎÄ¼þÖÐÅäÖÃµØÖ·
+    host: zuihou.rabbitmq.host # åœ¨hostsæ–‡ä»¶ä¸­é…ç½®åœ°å€
     port: 5672
     username: guest
     password: guest
   datasource:
     url: jdbc:mysql://zuihou.mysql.host:3306/zuihou_zipkin_dev?serverTimezone=CTT&characterEncoding=utf8&useUnicode=true&useSSL=false
     username: root
-    password: root  # ÕâÀï²»ÐèÒª¼ÓÃÜ
-# rabbitMQ/Mysql/Redis ip£¬¶Ë¿Ú£¬ÕÊºÅµÈ¸ù¾Ý»·¾³×ÔÐÐÐÞ¸Ä¡£
+    password: root  # è¿™é‡Œä¸éœ€è¦åŠ å¯†
+# rabbitMQ/Mysql/Redis ipï¼Œç«¯å£ï¼Œå¸å·ç­‰æ ¹æ®çŽ¯å¢ƒè‡ªè¡Œä¿®æ”¹ã€‚
 
 logging:
   common-pattern: '%d{HH:mm:ss.SSS}:[%5p] [%t] [%C{1}:%M:%L] --> %m%n'
