--- a/admin/config-repo/zuihou-service/zuihou-zipkin/application.yml
+++ b/admin/config-repo/zuihou-service/zuihou-zipkin/application.yml
@@ -14,16 +14,18 @@ spring:
   sleuth:
     enabled: false # 表示当前程序不使用sleuth
   rabbitmq:
-    host: zuihou.rabbitmq.host # 在hosts文件中配置地址
+    #host: zuihou.rabbitmq.host # 在hosts文件中配置地址
+    host: 192.168.31.36
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: admin123
   datasource:
     schema[0]: classpath:/zipkin.sql #数据库脚本创建地址，当有多个是可使用[x]表示集合第几个元素
     #spring boot数据源配置
-    url: jdbc:mysql://zuihou.mysql.host:3306/zuihou_zipkin_dev?serverTimezone=CTT&characterEncoding=utf8&useUnicode=true&useSSL=false
+    #url: jdbc:mysql://zuihou.mysql.host:3306/zuihou_zipkin_dev?serverTimezone=CTT&characterEncoding=utf8&useUnicode=true&useSSL=false
+    url: jdbc:mysql://192.168.31.37:3306/zipkin_dev?serverTimezone=CTT&characterEncoding=utf8&useUnicode=true&useSSL=false
     username: root
-    password: root     # 这里不需要加密
+    password: Report@123     # 这里不需要加密
     driver-class-name: com.mysql.cj.jdbc.Driver
     initialize: true
     continue-on-error: true
