--- a/admin/config-repo/zuihou-service/zuihou-zipkin/application-dev.yml
+++ b/admin/config-repo/zuihou-service/zuihou-zipkin/application-dev.yml
@@ -3,14 +3,14 @@ spring:
   profiles:
     active: dev
   rabbitmq:
-    host: zuihou.rabbitmq.host # 在hosts文件中配置地址
+    host: 192.168.31.36 # 在hosts文件中配置地址
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: admin123
   datasource:
-    url: jdbc:mysql://zuihou.mysql.host:3306/zuihou_zipkin_dev?serverTimezone=CTT&characterEncoding=utf8&useUnicode=true&useSSL=false
+    url: jdbc:mysql://192.168.31.37:3306/zipkin_dev?serverTimezone=CTT&characterEncoding=utf8&useUnicode=true&useSSL=false
     username: root
-    password: root  # 这里不需要加密
+    password: Report@123  # 这里不需要加密
 # rabbitMQ/Mysql/Redis ip，端口，帐号等根据环境自行修改。
 
 logging:
